src/objects/Message_History__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text Message</fullName>
                </value>
                <value>
                    <fullName>Emailed Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Messages History</relationshipLabel>
        <relationshipName>Messages_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>Messages History</relationshipLabel>
        <relationshipName>Messages_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealership_Phone__c</fullName>
        <label>Dealership Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Formatted_Dealership_Phone__c</fullName>
        <formula>IF(Dealership_Phone__c != null, 
IF( $Setup.BP_Configurations__c.Dealership_Country__c != null , 
IF($Setup.BP_Configurations__c.Dealership_Country__c == &apos;Australia&apos;, 
CASE( LEN(Dealership_Phone__c) , 
8 , MID(Dealership_Phone__c, 0, 4) + &quot; &quot; +MID(Dealership_Phone__c, 5, 4) , 
10 , IF(BEGINS(Dealership_Phone__c, &apos;04&apos;) || BEGINS(Dealership_Phone__c, &apos;05&apos;) , 
MID(Dealership_Phone__c, 0, 4) + &quot; &quot; +MID(Dealership_Phone__c, 5, 3)+ &quot; &quot; +MID(Dealership_Phone__c, 8, 3), 
MID(Dealership_Phone__c, 0, 2) + &quot; &quot; +MID(Dealership_Phone__c, 3, 4)+ &quot; &quot; +MID(Dealership_Phone__c, 7, 4)) 
, Dealership_Phone__c ), 


CASE( LEN(Dealership_Phone__c) , 10, &quot;(&quot; + MID(Dealership_Phone__c, 0, 3) + &quot;) &quot; +MID(Dealership_Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Dealership_Phone__c, 7, 4) , Dealership_Phone__c)) 
, 
CASE( LEN(Dealership_Phone__c) , 8 , MID(Dealership_Phone__c, 0, 4) + &quot; &quot; +MID(Dealership_Phone__c, 4, 4) , 
10, &quot;(&quot; + MID(Dealership_Phone__c, 0, 3) + &quot;) &quot; +MID(Dealership_Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Dealership_Phone__c, 7, 4) , Dealership_Phone__c)), 
&quot;&quot;)</formula>
        <label>Formatted Dealership Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Phone__c</fullName>
        <formula>IF(Phone__c != null, 
IF(Sent_To__c != null &amp;&amp; Sent_To__r.BillingCountry != null , 
IF(Sent_To__r.BillingCountry == &apos;Australia&apos;, 
CASE( LEN(Phone__c) , 
8 , MID(Phone__c, 0, 4) + &quot; &quot; +MID(Phone__c, 5, 4) , 
10 , IF(BEGINS(Phone__c, &apos;04&apos;) || BEGINS(Phone__c, &apos;05&apos;) , 
MID(Phone__c, 0, 4) + &quot; &quot; +MID(Phone__c, 5, 3)+ &quot; &quot; +MID(Phone__c, 8, 3), 
MID(Phone__c, 0, 2) + &quot; &quot; +MID(Phone__c, 3, 4)+ &quot; &quot; +MID(Phone__c, 7, 4)) 
, Phone__c ), 


CASE( LEN(Phone__c) , 10, &quot;(&quot; + MID(Phone__c, 0, 3) + &quot;) &quot; +MID(Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Phone__c, 7, 4) , Phone__c)) 
, 
CASE( LEN(Phone__c) , 8 , MID(Phone__c, 0, 4) + &quot; &quot; +MID(Phone__c, 4, 4) , 
10, &quot;(&quot; + MID(Phone__c, 0, 3) + &quot;) &quot; +MID(Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Phone__c, 7, 4) , Phone__c)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_By_Formula__c</fullName>
        <formula>IF(AND(ISPICKVAL(SMS_Direction__c, &apos;Sent&apos;), ISBLANK(Sent_By__c)), &apos;SMS Provider&apos;, Sent_By__r.Name__c)</formula>
        <label>Sent By (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>Thsi is not used now. Instead we use SMS_Body__c.</description>
        <inlineHelpText>Thsi is not used now. Instead we use SMS_Body__c.</inlineHelpText>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Body__c</fullName>
        <label>SMS Body</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMS_Direction__c</fullName>
        <label>SMS Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Reply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoming_SMS_Time__c</fullName>
        <label>Incoming SMS Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Message_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMS_Sent_From__c</fullName>
        <label>SMS Sent From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message_UUID__c</fullName>
        <label>Message UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>

    <label>Message History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Formatted_Phone__c</columns>
        <columns>Phone__c</columns>
        <columns>Sent_To__c</columns>
        <columns>Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MSG-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>